@startuml
title Core Data Model — Entity Relationship Diagram

left to right direction
skinparam linetype ortho
skinparam shadowing false

skinparam package {
  BorderColor #666
  FontStyle bold
}

skinparam classBackgroundColor white

package "Patient Core" #E3F2FD {

class Patient {
  id
  displayName
  personalNumber
  dateOfBirth
  palId
  lastOpenedAt
}

class Case {
  id
  patientId
  episodeId?
  status
  category
  triggers
  policyWarnings
  triageDecision?
  bookings[]?
  reviews[]
  closedAt?
}

}

package "Journeys" #E8F5E9 {

class EpisodeOfCare {
  id
  patientId
  label
  status
  openedAt
  closedAt?
  responsibleUserId?
  primaryCaseId?
}

class PatientJourney {
  id
  episodeId
  patientId
  journeyTemplateId
  phaseType
  phaseLabel?
  startDate
  joinedAt
  transition?
  status
  pausedAt
  totalPausedDays
  researchModuleIds
  recurringCompletions[]
  modifications[]
}

class Instruction {
  id
  patientJourneyId
  journeyTemplateInstructionId?
  instructionTemplateId
  label?
  startDayOffset
  endDayOffset?
  startAt
  endAt?
  status
  acknowledgedAt?
  completedAt?
}

class JourneyModification {
  id
  type
  addedByUserId
  reason
  addedAt
  entry?
  stepId?
  mergedFromJourneyId?
}

}

package "Templates" #FFF8E1 {

class JourneyTemplate {
  id
  name
  description
  parentTemplateId
  derivedAt
  entries[]
  instructions[]
}

class JourneyTemplateEntry {
  id
  label
  offsetDays
  windowDays
  order
  templateId?
  scoreAliases
  scoreAliasLabels
  dashboardCategory
}

class JourneyTemplateInstruction {
  id
  journeyTemplateId
  instructionTemplateId
  label?
  startDayOffset
  endDayOffset?
  order
  tags[]
}

class InstructionTemplate {
  id
  name
  content
  tags[]
  createdAt
  updatedAt
}

}

package "Research" #F3E5F5 {

class ResearchModule {
  id
  name
  studyInfoMarkdown
  entries[]
}

class Consent {
  id
  patientId
  researchModuleId
  patientJourneyId
  grantedAt
  grantedByUserId
  revokedAt
  revokedByUserId
}

}

package "Forms" #FBE9E7 {

class FormResponse {
  id
  patientId
  caseId
  templateId
  answers
  scores
  patientJourneyId?
  journeyTemplateEntryId?
}

class JournalDraft {
  id
  caseId
  templateId
  content
  status
}

}

Patient "1" -- "*" Case : has
Patient "1" -- "*" EpisodeOfCare : episodes
Patient "1" -- "*" PatientJourney : journeys
Patient "1" -- "*" Consent : consents

Case "1" -- "*" FormResponse : responses
Case "1" -- "*" JournalDraft : drafts
Case "0..1" -- "1" EpisodeOfCare : episodeId

FormResponse "*" -- "0..1" PatientJourney : patientJourneyId
FormResponse "*" -- "0..1" JourneyTemplateEntry : journeyTemplateEntryId

EpisodeOfCare "1" -- "*" PatientJourney : phases

JourneyTemplate "1" -- "*" JourneyTemplateEntry : entries
JourneyTemplate "1" -- "*" JourneyTemplateInstruction : instructions
JourneyTemplate "0..1" -- "*" JourneyTemplate : parentTemplateId (derives)

JourneyTemplateInstruction "*" -- "1" InstructionTemplate : instructionTemplateId

PatientJourney "*" -- "1" JourneyTemplate : journeyTemplateId
PatientJourney "1" -- "*" JourneyModification : modifications
PatientJourney "1" -- "*" Instruction : instructions

Instruction "*" -- "1" InstructionTemplate : instructionTemplateId
Instruction "*" -- "0..1" JourneyTemplateInstruction : journeyTemplateInstructionId

PatientJourney "*" -- "*" ResearchModule : researchModules
Consent "*" -- "1" ResearchModule : researchModuleId

legend right
  | Notation | Meaning |
  | field? | Optional/nullable field |
  | field[] | Array/list field |
  | *Id | Reference/identifier field |
  | 2026-03-08T14:30:45.123Z | ISO datetime example |
  | ACUTE / SUBACUTE / CONTROL | Category enum examples |
endlegend

note right of JourneyTemplate
  Example:
  name = "Proximala humerusfraktur"
  parentTemplateId links to source template if derived
  derivedAt stores last sync timestamp from parent
end note

note right of JourneyTemplateEntry
  Example:
  label = "Vecka 4 - fysiokontroll"
  offsetDays = 28, windowDays = 7
  scoreAliases = {"PNRS_2":"PNRS_week4", "OSS.total":"OSS_week4"}
  dashboardCategory = SUBACUTE
end note

note right of Consent
  Example:
  grantedAt = "2026-03-08T14:30:45.123Z"
  revokedAt = null (active) or timestamp (revoked)
  One active consent per patient+module+journey
  Revoked records are kept for audit trail
end note

note right of FormResponse
  Follow-up trigger semantics:
  JourneyTemplateEntry defines a due follow-up point.
  When a form is submitted, FormResponse may reference
  patientJourneyId and journeyTemplateEntryId.
  Submission updates Case.triggers and policyWarnings,
  which then drive staff triage decisions.
end note

note bottom
  Simplified ERD for readability.
  Some optional UI/audit helper fields are intentionally omitted.
end note

@enduml